<resources>
    <string name="app_name">UltraFit</string>
    <string name="title_statics">Estadística</string>
    <string name="title_exercises">Rutinas</string>
    <string name="title_user">Usuario</string>
    <string name="welcome">Bienvenido</string>
    <string name="pleaseRegister">Ingrese sus datos</string>
    <string name="name">Nombre</string>
    <string name="age">Edad</string>
    <string name="stature">Estatura</string>
    <string name="weight">Peso</string>
    <string name="objective">Objetivo</string>
    <string name="adelgazar">Adelgazar</string>
    <string name="tonificar">Tonificar</string>
    <string name="accept">Aceptar</string>
    <string name="title_activity_excersies_list">ExcersiesListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>